Fix more issues and alignment

--- a/src/routes/PlayQuiz/styles.module.css
+++ b/src/routes/PlayQuiz/styles.module.css
@@ -1,19 +1,18 @@
 .categoryGridContainer {
   container-type: inline-size;
   container-name: panel;
-  min-width: 320px;
-  align-items: center;
-  justify-content: center;
 }
 
 .categoryGrid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, calc(33% - 40px));
+  gap: 20px;
+  justify-content: center;
 }
 
-@container panel (max-width: 900px) {
+@container panel (max-width: 980px) {
   .categoryGrid {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, calc(50% - 20px));
   }
 }
 
@@ -23,26 +22,13 @@
   }
 }
 
-
-.avatar {
-  border-radius: 32px;
-  width: 38px;
-  height: 38px;
-  font-weight: 700;
-  color: white;
-}
-
-.avatar.small {
-  border-radius: 28px;
-  width: 28px;
-  height: 28px;
-  font-weight: 700;
-  font-size: 12px;
-  color: white;
+.scoreAndTimer {
+  width: 320px;
 }
 
 .team.currentTeam {
   background: rgb(34, 139, 230);
+  flex-wrap: nowrap;
 }
 
 .team.currentTeam div {
@@ -56,6 +42,14 @@
 .teamWithoutPlayer {
   padding: 3px 15px 3px 3px;
   border-radius: 58px;
+}
+
+.Icon {
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  left: calc(50% - 0.45rem);
+  top: calc(50% - 0.5rem);
 }
 
 .ResizeHandleOuter {
@@ -73,12 +67,4 @@
   height: 100%;
   background-color: var(--background-color);
   transition: background-color 0.2s linear;
-}
-
-.Icon {
-  width: 14px;
-  height: 14px;
-  position: absolute;
-  left: calc(50% - 0.45rem);
-  top: calc(50% - 0.5rem);
 }
