--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -84,6 +84,10 @@ legend {
   flex-wrap: wrap;
 }
 
+.noWrap {
+  flex-wrap: nowrap;
+}
+
 .noShrink {
   flex-shrink: 0;
 }
